--- a/innfprog2024_exam/deleksamen1/exam1.html
+++ b/innfprog2024_exam/deleksamen1/exam1.html
@@ -23,12 +23,13 @@
             hx: "Efmfltbnfo 1",
             ix: "A sfuuf gfjmfof ph lpnnfoufsf lpefo wbs cbsf gåstuf efm bw pqqhbwfo. Ev tlbm phta ub gps efh ufltufo ev tlsfw j bscfjetlsbw 1, ph tlsjwf fu ozuu sfgmfltkpotopubu oa oas ev ibs hkfoopngåsu lvstfu. J efuuf sfgmfltkpotopubufu, twbs qa gåmhfoef tqåstnam:",
             qx: ["Botfs ev qsphsbnnfsjoh tpn ozuujh?", "Tfs ev gps efh bu ev wjm csvlf qsphsbnnfsjoh j ejuu wjefsf tuvejfmåq?", "Iwps npujwfsu fs ev gps a vugpstlf qsphsbnnfsjoh wjefsf fuufs lvstfu?"],
-            dx= "Mbh fo QEG bw eplvnfoufu, ph mfhh wfe caef efuuf eplvnfoufu tbnu cftwbsfmtfo gps bscfjetlsbw 1 j cftwbsfmtfo ujm efmfltbnfo 1."
+            //1: Det var "=" etter dx, i stedet for ":"
+            dx: "Mbh fo QEG bw eplvnfoufu, ph mfhh wfe caef efuuf eplvnfoufu tbnu cftwbsfmtfo gps bscfjetlsbw 1 j cftwbsfmtfo ujm efmfltbnfo 1."
         }
 
         function decode(input) {
             const alphabet = 'abcdefghijklmnopqrstuvwxyzæøå'
-            const alphabetUpper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅ
+            const alphabetUpper = 'ABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅ' //2: Det manglet en fnutt på slutten her.
 
             const getPreviousChar = (char, alphabet) => {
                 const index = alphabet.indexOf(char);
@@ -36,7 +37,7 @@
             };
 
             return input.split('').map(char => {
-                if (alphabetT.includes(char)) {
+                if (alphabet.includes(char)) { //3: Her var det en stor T på slutten av alphabet-variabelen. Når jeg løste denne fikk kom den første delen av teksten til syne.
                     return getPreviousChar(char, alphabet)
                 } else if (alphabetUpper.includes(char)) {
                     return getPreviousChar(char, alphabetUpper)
@@ -48,9 +49,9 @@
         //PRINT DECODED MATERIAL
         document.getElementById("heading").innerHTML = decode(code.hx)
         document.getElementById("intro").innerHTML = decode(code.ix)
-        document.getElementById("q1").innerhtml = decode(code.qx[0])
-        document.getElementByID("q2").innerHTML = decode(code.qx[1])
-        document.getElementById("q3").innerHTML = decode(code.qx[2)
+        document.getElementById("q1").innerHTML = decode(code.qx[0]) //4: Her var HTML i 'innerHTML' skrevet med små bokstaver.
+        document.getElementById("q2").innerHTML = decode(code.qx[1]) //5: D'en på slutten av 'getElementById' var stor.
+        document.getElementById("q3").innerHTML = decode(code.qx[2]) //6: Her manglet det en klamme etter 2-tallet. Jeg fant feilene ved å lese gjennom JavaScriptet sakte.
         document.getElementById("delivery").innerHTML = decode(code.dx)
     </script>
 </body>
