La til noen style-elementer i books

--- a/innfprog2024_exam/deleksamen2/exam2.html
+++ b/innfprog2024_exam/deleksamen2/exam2.html
@@ -142,7 +142,7 @@
                 if (todosObject.status === "Done") {
                     const html = `
                     <li>
-                    <span class="task-test">${text}</span>
+                    <span class="task-text">${text}</span>
                     <span class="task-status task-status-done">${status}</span>
                     </li>
                     `;
@@ -150,7 +150,7 @@
                 } else {
                     const html = `
                     <li>
-                    <span class="task-test">${text}</span>
+                    <span class="task-text">${text}</span>
                     <span class="task-status task-status-todo">${status}</span>
                     </li>
                     `;
